fix spotbugs warnings by applying defensive copy or exclude specifics types